# neat

./: .gitignore  LICENSE  README.md  __init__.py  activations.py  config.py  organism.py  population.py  pyproject.toml  reporter.py  reproduction.py  setup.py  species.py
demos/: xor.config.json  xor.py
example/: setup.sh  xor.config.json  xor.py
neat/: __init__.py  activations.py  config.py  organism.py  plotting.py  population.py  reporter.py  reproduction.py  species.py  utils.py
