[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berens-neat"
version = "0.1.0"
authors = [
  { name="Charlie Berens", email="charliejb3@gmail.com" },
]
description = "A simple implementation of NEAT in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/charlieberens/neat"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters